Add helper attr_currency for storing currency column in cent

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
-= attr_money
+= attr_currency
 
 Description goes here.
 
-== Contributing to attr_money
+== Contributing to attr_currency
  
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
